bugfixing LSHIFT+Enter for new lines in textarea

--- a/src/app/main/channel/channel.component.scss
+++ b/src/app/main/channel/channel.component.scss
@@ -484,6 +484,7 @@ td:hover .b-radius {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    white-space: pre-wrap
 }
 
 .textEditingArea {
